syntax = "proto3";

package planning;

enum PlanType {
  PLAN_TYPE_UNKNOWN = 0;
  PLAN_TYPE_OPTIM_CREDIT_SCORE = 1;
  PLAN_TYPE_MIN_FEES = 2;
}

enum PaymentFrequency {
  PAYMENT_FREQUENCY_UNKNOWN = 0;
  PAYMENT_FREQUENCY_WEEKLY = 1;
  PAYMENT_FREQUENCY_BIWEEKLY = 2;
  PAYMENT_FREQUENCY_MONTHLY = 3;
  PAYMENT_FREQUENCY_QUARTERLY = 4;
}